 @startuml Entities

    class UserWord {
        +bigint id
        +bigint user_id
        +bigint word_id
        +tinyint proficiency_level
    }

    class Definition {
        +bigint id
        +bigint word_id
        +bigint word_type_id
        +bigint verb_base_id
        +bigint creator_id
        +String definition
    }

    class Word {
        +bigint id
        +bigint creator_id
        +String word
    }

    class WordMedia {
        +bigint id
        +bigint word_id
        +bigint media_id
        +bigint creator_id
        +String type
    }

    class User {
        +bigint id
        +String name
        +String email
        +timestamp email_verified_at
        +String password
        +String remember_token
    }

    class Review {
        +bigint id
        +boolean passed
        +date review_date
    }

    class Text {
        +bigint id
        +bigint user_id
        +text content
        +String title
    }

    class TextType {
        +bigint id
        +String name
    }

    class Media {
        +bigint id
        +bigint user_id
        +String url
    }



    class Role {
        +bigint id
        +String name
        +String description
    }

    class WordType {
        +bigint id
        +String name
        +String description
    }

    class WordTypeExample {
        +bigint id
        +bigint word_type_id
        +String example
    }

    note "<b>All models</b> \nhave created_at and \nupdated_at attributes " as N1

    WordType "1" --> "0..*" WordTypeExample : has
    User "1" <-- "0..*" Text : has a creator
    Text "*" -right-> "1" TextType : type
    User "1" --> "0..*" UserWord : has
    UserWord "1" -down-> "0..*" Review : has
    Word "1" --> "1..*" Definition :  has definitions
    Word "1" -- "0..*" Text : texts (is in many)
    Word "1" <-left- "0..*" UserWord : has
    WordType "1" -left- "1..*" Definition : type
    WordMedia "1" -- "0..*" Media : has
    WordMedia "*" -left-> "1" User : has a creator
    Definition "1" -up-> "0..*" WordMedia : has
    User "1" -left-> "1..*" Role : has
    Definition "1" --> "1..1" Word : verb base\n(if is verb)
    Definition "1" --> "1" User : has as creator
    Word "*" <-up- "1" User: has a creator
@enduml
